# lightweight-data-platform

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  README.md  Taskfile.yml  pyproject.toml
ingestion/: order_files.py
ingestion/tools/: file_resourses.py
transformations/: .user.yml  dbt_project.yml  packages.yml  profiles.yml
transformations/docs/: docs_general.md  docs_orders.md
transformations/macros/: generate_guid.sql
transformations/macros/constants/: source_systems.sql
transformations/models/0_sources/: orders.yml
transformations/models/1_staging/: _stg_orders.yml  stg_customers.sql  stg_order_items.sql  stg_orders.sql  stg_products.sql
