[project]
name = "lightweight-data-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-duckdb>=1.9.0",
    "dlt[duckdb]>=1.27.2",
    "pandas>=2.2.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
